--- a/src/main/resources/bungee.yml
+++ b/src/main/resources/bungee.yml
@@ -1,6 +1,4 @@
 name: MinecraftOAuth
 main: bot.aperture.BungeeMain
 version: 1.0
-authors:
-  - McIsTheLimit (Justin#1337)
-  - nadie__ (Nadie#0063)
+author: McIsTheLimit (Justin#1337) & nadie__ (Nadie#0063)
