--- a/src/main/resources/auth.yml
+++ b/src/main/resources/auth.yml
@@ -1,9 +1,9 @@
 users:
-  84b5c07d-2709-44d7-a9eb-32945986fbd5:
-    mc_username: McIsTheLimit
-    user_id: 104376018222972928
-    username: Justin
-    discrim: 1337
-    date_auth: "November 8th, 2021; 12:28 AM UTC"
-    bearer_token: ""
-    refresh_token: ""
+#  84b5c07d-2709-44d7-a9eb-32945986fbd5:
+#    mc_username: McIsTheLimit
+#    user_id: 104376018222972928
+#    username: Justin
+#    discrim: 1337
+#    date_auth: "November 8th, 2021; 12:28 AM UTC"
+#    bearer_token: ""
+#    refresh_token: ""
